--- a/Core/BookingProject.Application/BookingProject.Application.csproj
+++ b/Core/BookingProject.Application/BookingProject.Application.csproj
@@ -10,4 +10,14 @@
     <ProjectReference Include="..\BookingProject.Domain\BookingProject.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Mediator\Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
